--- a/package.json
+++ b/package.json
@@ -121,16 +121,17 @@
     "test:mcp": "node scripts/test-mcp.js",
     "test:multisite": "node scripts/test-multisite-quick.js",
     "test:performance": "npm run build && vitest run tests/performance/",
+    "test:performance:ci": "npm run build && vitest run tests/performance/ --exclude=\"**/regression-detection.test.js\"",
     "test:property": "npm run build && vitest run tests/property/",
     "test:security": "npm run build && vitest run tests/security/",
     "test:security:penetration": "npm run build && vitest run tests/security/penetration-tests.test.js",
     "test:security:validation": "npm run build && vitest run tests/security/security-validation.test.js",
     "test:tools": "node scripts/test-all-tools-fixed.js",
     "test:typescript": "npm run build && vitest run",
+    "test:ui": "npm run build && vitest --ui",
     "test:watch": "vitest",
     "test:weekly": "npm run test:compatibility",
     "test:with-env": "bash scripts/start-test-env.sh && npm run test:typescript",
-    "test:ui": "npm run build && vitest --ui",
     "typecheck": "tsc --noEmit",
     "verify-claude": "node scripts/verify-claude-integration.js"
   },
