--- a/dxt/manifest.json
+++ b/dxt/manifest.json
@@ -36,11 +36,11 @@
   ],
   "server": {
     "type": "node",
-    "entry_point": "dist/dxt-entry.cjs",
+    "entry_point": "dist/dxt-entry.js",
     "mcp_config": {
       "command": "node",
       "args": [
-        "${__dirname}/dist/dxt-entry.cjs"
+        "${__dirname}/dist/dxt-entry.js"
       ],
       "env": {
         "WORDPRESS_SITE_URL": "${user_config.wordpress_site_url}",
