--- a/.github/workflows/security-monitoring.yml
+++ b/.github/workflows/security-monitoring.yml
@@ -37,18 +37,12 @@ jobs:
           fetch-depth: 0  # Full history for better scanning
 
       - name: 🔍 TruffleHog Secret Scan
-        uses: trufflesecurity/trufflehog@v3.82.11
+        uses: trufflesecurity/trufflehog@v3.82.13
         with:
           path: ./
-          base: >-
-            ${{ github.event_name == 'pull_request' &&
-            github.event.pull_request.base.sha || '' }}
-          head: >-
-            ${{ github.event_name == 'pull_request' &&
-            github.event.pull_request.head.sha || '' }}
-          extra_args: >-
-            --only-verified
-            --exclude-paths="tests/,*.test.js,*.spec.js,docs/,*.md,.github/ISSUE_TEMPLATE/"
+          base: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || '' }}
+          head: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || '' }}
+          extra_args: --only-verified --exclude-paths="tests/,*.test.js,*.spec.js,docs/,*.md,.github/ISSUE_TEMPLATE/"
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2.3.6
@@ -130,20 +124,19 @@ jobs:
           npm audit --production
           npm audit --json > npm-audit.json || true
 
-      - name: 🔍 Check for known vulnerabilities with Snyk
-        if: ${{ secrets.SNYK_TOKEN != '' }}
-        uses: snyk/actions/node@master
-        continue-on-error: true
+      - name: 🔍 Check for known vulnerabilities with Snyk (Optional)
+        run: |
+          if [ -n "${{ secrets.SNYK_TOKEN }}" ]; then
+            echo "Running Snyk scan..."
+            npm install -g snyk
+            snyk test --severity-threshold=medium || echo "Snyk scan completed with findings"
+          else
+            echo "⚠️ **Snyk scanning skipped** - SNYK_TOKEN not configured" >> $GITHUB_STEP_SUMMARY
+            echo "To enable Snyk scanning, add SNYK_TOKEN to repository secrets" >> $GITHUB_STEP_SUMMARY
+          fi
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=medium
-
-      - name: 📊 Snyk Skipped Notice
-        if: ${{ secrets.SNYK_TOKEN == '' }}
-        run: |
-          echo "⚠️ **Snyk scanning skipped** - SNYK_TOKEN not configured" >> $GITHUB_STEP_SUMMARY
-          echo "To enable Snyk scanning, add SNYK_TOKEN to repository secrets" >> $GITHUB_STEP_SUMMARY
+        continue-on-error: true
 
       - name: 🔍 OSSF Scorecard analysis (Optional)
         run: |
