fix: correct TruffleHog exclude paths parameter
Fix TruffleHog secret scanning by using --exclude-globs instead of
--exclude-paths and proper glob pattern syntax. This resolves the
'no such file or directory' error when TruffleHog tried to interpret
the comma-separated patterns as a file path.

Changes:
- Use --exclude-globs instead of --exclude-paths
- Convert patterns to proper glob format (tests/** instead of tests/)
- Remove .github/ISSUE_TEMPLATE/ to simplify patterns

--- a/.github/workflows/security-monitoring.yml
+++ b/.github/workflows/security-monitoring.yml
@@ -42,7 +42,7 @@ jobs:
           path: ./
           base: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || '' }}
           head: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || '' }}
-          extra_args: --only-verified --exclude-paths="tests/,*.test.js,*.spec.js,docs/,*.md,.github/ISSUE_TEMPLATE/"
+          extra_args: --only-verified --exclude-globs="tests/**,**/*.test.js,**/*.spec.js,docs/**,**/*.md"
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2.3.6
