chore: remove personal site references from public documentation
- Add personal evaluation config to .gitignore
- Create generic example-sites-eval.yaml for public use
- Update DXT entry point to log MULTI_SITE_MODE environment variable
- Ensure no personal domains appear in public-facing documentation

--- a/.gitignore
+++ b/.gitignore
@@ -217,4 +217,5 @@ PRIVATE*
 # Evaluation results (keep config, ignore results)
 evaluations/results/
 evaluations/reports/
+evaluations/config/existing-sites-eval.yaml
 
