--- a/package.json
+++ b/package.json
@@ -79,10 +79,11 @@
     "test:auth": "node scripts/test-auth.js",
     "test:batch": "npm run test:batch:1 && npm run test:batch:2 && npm run test:batch:3 && npm run test:batch:4",
     "test:batch:1": "npm run build && NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run tests/security/ tests/cache/ tests/server/",
-    "test:batch:2": "npm run build && NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run tests/client/ tests/config/ tests/utils/",
-    "test:batch:3": "npm run build && NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run tests/tools/ tests/performance/",
-    "test:batch:4": "npm run build && NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run tests/*.test.js tests/docs/",
-    "test:ci": "npm run build && CI=true NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run",
+    "test:batch:2": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/client/ tests/config/ tests/utils/ --reporter=basic",
+    "test:batch:3": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/tools/ tests/performance/ --reporter=basic",
+    "test:batch:4": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144\" vitest run tests/*.test.js tests/docs/ --reporter=basic",
+    "test:ci": "npm run build && CI=true NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run --reporter=basic",
+    "test:ci:safe": "NODE_OPTIONS=\"--max-old-space-size=8192\" npx vitest run --config vitest.ci.config.ts",
     "test:compatibility": "npm run build && vitest run tests/compatibility/ || echo 'No compatibility tests found'",
     "test:config": "npm run build && vitest run tests/config/",
     "test:coverage": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144\" vitest run --coverage",
