fix(ci): Replace batch test execution with proper vitest sharding to prevent V8 memory crashes
- Changed from 'npm test -- --shard=' to direct 'npx vitest run --shard='
- The batch scripts were ignoring shard parameters and running all tests sequentially
- This caused V8 Fatal JavaScript invalid size error 169220804 in CI
- Now properly distributes tests across 3 shards with memory isolation
- Explicit NODE_OPTIONS ensures each shard has 8GB memory limit

Fixes: Test Suite failures in ci-optimized.yml
Resolves: V8 memory crash during test:batch:2 execution

--- a/.github/workflows/ci-optimized.yml
+++ b/.github/workflows/ci-optimized.yml
@@ -111,7 +111,7 @@ jobs:
 
       - name: 🧪 Run Tests (Shard ${{ matrix.shard }}/${{ matrix.total-shards }})
         run: |
-          npm test -- --shard=${{ matrix.shard }}/${{ matrix.total-shards }} --coverage --reporter=verbose
+          NODE_OPTIONS="--max-old-space-size=8192" npx vitest run --shard=${{ matrix.shard }}/${{ matrix.total-shards }} --coverage --reporter=verbose
         env:
           CI: true
           NODE_ENV: test
