--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "test:memory-config": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144\" vitest run --config vitest.memory-safe.config.ts",
     "test:memory-safe": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144 --max-semi-space-size=256\" vitest run --no-coverage --reporter=basic",
     "test:performance": "npm run build && vitest run tests/performance/",
+    "test:pre-push": "bash scripts/test-pre-push.sh",
     "test:performance:ci": "npm run build && mkdir -p tests/results && NODE_OPTIONS=\"--max-old-space-size=4096\" vitest run tests/performance/ --reporter=json --outputFile=tests/results/performance-results.json",
     "test:safe": "node scripts/run-tests-safe.cjs",
     "test:security": "npm run build && vitest run tests/security/",
