--- a/package.json
+++ b/package.json
@@ -82,19 +82,19 @@
     "test": "npm run test:batch",
     "test:auth": "node scripts/test-auth.js",
     "test:batch": "npm run test:batch:1 && npm run test:batch:2 && npm run test:batch:3 && npm run test:batch:4",
-    "test:batch:1": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/security/ tests/cache/ tests/server/ --no-coverage --reporter=basic",
-    "test:batch:2": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/client/ tests/config/ tests/utils/ --no-coverage --reporter=basic",
-    "test:batch:3": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/tools/ tests/performance/ --no-coverage --reporter=basic",
-    "test:batch:4": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/*.test.js tests/docs/ --no-coverage --reporter=basic",
+    "test:batch:1": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/security/ tests/cache/ tests/server/ --no-coverage --reporter=default",
+    "test:batch:2": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/client/ tests/config/ tests/utils/ --no-coverage --reporter=default",
+    "test:batch:3": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/tools/ tests/performance/ --no-coverage --reporter=default",
+    "test:batch:4": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run tests/*.test.js tests/docs/ --no-coverage --reporter=default",
     "test:cache": "npm run build && vitest run tests/cache/",
-    "test:ci": "npm run build && CI=true NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run --reporter=basic",
+    "test:ci": "npm run build && CI=true NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run --reporter=default",
     "test:ci:safe": "NODE_OPTIONS=\"--max-old-space-size=8192\" npx vitest run --config vitest.ci.config.ts",
     "test:compatibility": "npm run build && vitest run tests/compatibility/ || echo 'No compatibility tests found'",
     "test:config": "npm run build && vitest run tests/config/",
     "test:coverage": "npm run build && NODE_OPTIONS=\"--max-old-space-size=8192\" vitest run --coverage",
     "test:coverage:report": "npm run test:coverage && node scripts/coverage-guardrail.js",
     "test:memory-config": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144\" vitest run --config vitest.memory-safe.config.ts",
-    "test:memory-safe": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144 --max-semi-space-size=256\" vitest run --no-coverage --reporter=basic",
+    "test:memory-safe": "npm run build && NODE_OPTIONS=\"--max-old-space-size=6144 --max-semi-space-size=256\" vitest run --no-coverage --reporter=default",
     "test:performance": "npm run build && vitest run tests/performance/",
     "test:pre-push": "bash scripts/test-pre-push.sh",
     "test:production-security": "npm audit --omit=dev",
