--- a/.github/workflows/docker-modern.yml
+++ b/.github/workflows/docker-modern.yml
@@ -106,7 +106,9 @@ jobs:
   build-and-push:
     name: 🏗️ Modern Build & Push
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' && !inputs.test_build
+    if: |
+      github.event_name == 'release' ||
+      (github.event_name == 'workflow_dispatch' && !inputs.test_build)
     permissions:
       contents: read
       packages: write
@@ -129,8 +131,8 @@ jobs:
             image=moby/buildkit:buildx-stable-1
 
       - name: 🔐 Log in to Docker Hub
-        if: inputs.push
-        uses: docker/login-action@v4
+        if: github.event_name == 'release' || inputs.push
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -143,8 +145,10 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
-            type=raw,value=${{ inputs.tag || 'dev' }}
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=${{ inputs.tag || 'dev' }},enable=${{ github.event_name == 'workflow_dispatch' }}
+            type=raw,value=latest,enable=${{ github.event_name == 'release' }}
           labels: |
             org.opencontainers.image.title=MCP WordPress Server
             org.opencontainers.image.description=Complete WordPress MCP Server with 59 management tools, intelligent caching, and real-time monitoring
@@ -165,7 +169,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm64/v8
-          push: ${{ inputs.push }}
+          push: ${{ github.event_name == 'release' || inputs.push }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           # Advanced caching with GitHub Actions cache
