fix(ci): resolve memory crashes in test runner
- Use test:batch instead of test:ci in main pipeline (no coverage)
- Add timeout and memory limits to coverage job
- Increase max-semi-space-size to prevent V8 heap allocation errors
- Separate test execution from coverage collection for stability

This fixes the 'Fatal JavaScript invalid size error' that was crashing
the CI/CD pipeline during coverage collection.

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm run build
 
       - name: Run tests
-        run: npm run test:ci
+        run: NODE_OPTIONS="--max-old-space-size=8192" npm run test:batch
         env:
           CI: true
 
@@ -89,7 +89,8 @@ jobs:
         continue-on-error: true
 
       - name: Test coverage
-        run: npm run test:coverage
+        run: NODE_OPTIONS="--max-old-space-size=8192 --max-semi-space-size=512" npm run test:coverage
+        timeout-minutes: 10
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
