fix(ci): disable coverage in CI pipelines to prevent memory crashes
- Remove coverage from main-ci.yml quality checks (use test:batch instead)
- Disable coverage in quality-assurance.yml (use test:batch instead)
- Coverage collection moved to dedicated Coverage Guard workflow
- Prevents 'Fatal JavaScript invalid size error 169220804' crashes

The coverage job requires too much memory in GitHub Actions runners.
Coverage is still collected and uploaded via the dedicated coverage-guard.yml
workflow which runs separately with appropriate resource allocation.

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -88,17 +88,10 @@ jobs:
         run: npm audit --production --audit-level moderate
         continue-on-error: true
 
-      - name: Test coverage
-        run: NODE_OPTIONS="--max-old-space-size=8192 --max-semi-space-size=512" npm run test:coverage
-        timeout-minutes: 10
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage/lcov.info
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
+      - name: Run tests without coverage
+        run: NODE_OPTIONS="--max-old-space-size=8192" npm run test:batch
+        env:
+          CI: true
 
   # Security scanning
   security:
